[project]
name = "detoxifywebui"
version = "0.6.0"
description = "CLI-enabled Detoxify fork for local SMB content analysis, with CSV/TXT support and a bare bones webUI that "just works"
readme = "README.md"
authors = [
    {name = "AnnaLynn Straps", email = "Github Message me"},
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.9,<3.13"
dependencies = [
    "sentencepiece >= 0.1.94",
    "torch >=2",
    "transformers >= 3",
    "pandas >= 1.1.2",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "datasets >= 1.0.2",
    "pytest",
    "pytorch-lightning >2",
    "scikit-learn >= 0.23.2",
    "pre-commit",
    "numpy >=2",
    "pyright"
]

[project.urls]
Homepage = "https://github.com/Strapples/Detoxify-WebUI"

[project.scripts]
detoxify-cli = "Detoxify-WebUI.cli:main"


[tool.setuptools]
packages = ["detoxifywebui"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E731",
    "E402",
    "F401",
    "F841",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
norecursedirs = [".git", "dist", "build"]
addopts = ["--strict-markers", "--doctest-modules", "--durations=0", "--color=yes"]
filterwarnings = [
    "ignore:.*deprecated alias.*:DeprecationWarning:tensorboard.*tensorflow_stub*:",
    "ignore:.*deprecated alias.*:DeprecationWarning:tensorboard.*tensor_util*:",
    "ignore:.*deprecated alias.*:DeprecationWarning:pyarrow.*pandas_compat*:",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"